1. Collection API Улучшения[#142947]